--- a/kosstyles.css
+++ b/kosstyles.css
@@ -102,3 +102,9 @@ nav ul li ul li ul:hover{
 .kosmaintext{
     position:static ;
 }
+.Excavator1{
+    width: 300px;
+    border-radius: 10%;
+    border-width: 3px;
+    border-color: yellow;
+}
